--- a/TP2/config.json
+++ b/TP2/config.json
@@ -18,5 +18,11 @@
 
   "B": 1,
   "replacement_algorithm_1": "elite",
-  "replacement_algorithm_2": "elite"
+  "replacement_algorithm_2": "elite",
+
+  "weapons_dataset_path": "./dataset/armas.tsv",
+  "boots_dataset_path": "./dataset/botas.tsv",
+  "helmets_dataset_path": "./dataset/cascos.tsv",
+  "gloves_dataset_path": "./dataset/guantes.tsv",
+  "armours_dataset_path": "./dataset/pecheras.tsv"
 }
