creo que esta el lineal pero tengo que revisar mejor todo
tambien hice varias tareas de refactoreo, tengo
que reveer la clase para checkear que no haya hecho cualquiera

--- a/TP3/config.json
+++ b/TP3/config.json
@@ -1,4 +1,4 @@
 {
-    "algorithm":"perceptron_simple",
+    "algorithm":"perceptron_simple_escalon",
     "training_set_path":"data/perceptronSimpleY.csv"
 }
