--- a/TP3/config.json
+++ b/TP3/config.json
@@ -1,4 +1,4 @@
 {
-    "algorithm":"perceptron_simple_escalon",
+    "algorithm":"simple_stair_perceptron",
     "training_set_path":"data/perceptronSimpleY.csv"
 }
