--- a/TP5/configs/config.json
+++ b/TP5/configs/config.json
@@ -1,7 +1,7 @@
 {
     "learning_rate": 0.0001,
     "learning_rate_decay": 0.1,
-    "epochs": 50000,
+    "epochs": 10000,
 
     "training_dataset":"data/parsed_letters.txt",
     "labels": ["@","A","B","C","D","E","F","G","H","I","J","K","L","M","N","O","P","Q","R","S","T","U","V","W","X","Y","Z","[","\\","]","^","_"],
@@ -10,8 +10,8 @@
     "width": 5,
     "height": 7,
 
-    "layers": [35, 25, 2, 25, 35],
-    "latent_layer": 2,
+    "layers": [35, 25, 15, 2, 15, 25, 35],
+    "latent_layer": 3,
     "batch_size": 8,
     "momentum": 0.8,
 
